fix layout issue

--- a/sass/shot_item.scss
+++ b/sass/shot_item.scss
@@ -133,6 +133,7 @@
   margin-top: 12px;
   padding-left: 10px;
   line-height: 10px;
+  height: 16px;
   .avater {
     display: inline-block;
     width: 16px;
